feat: voter dashboard profile dropdown, register page
