# backend/routes/userAuthRoutes.js
@@ -5,5 +5,6 @@ const userAuthController = require("../controllers/userAuthController");
 
 router.post("/signup", userAuthController.userSignup);
 router.post("/login", userAuthController.userLogin);
+router.get("/users", userAuthController.getUsers);
 
 module.exports = router;
